--- a/style.css
+++ b/style.css
@@ -37,3 +37,11 @@ body {
     background-color: #000000;
     color: #ffffff;
 }
+
+th {
+    text-align: center;
+}
+
+td {
+    text-align: center;
+}
